tests/sksl/errors/IndexOutOfVectorRange.glsl
### Compilation failed:

error: 6: index -1 out of range for 'int3'
error: 6: index 3 out of range for 'int3'
2 errors
